# aurora-task2

./: .gitignore  CMakeLists.txt  README.md  开发日志.md
assets/: best.xml
configs/: gimbal.yaml
io/: camera.cpp  camera.hpp
io/gimbal/: gimbal.cpp  gimbal.hpp
src/: main.cpp
tasks/auto_aim/: armor.hpp  solver.cpp  solver.hpp  yolo.cpp  yolo.hpp
tasks/auto_aim/yolos/: yolov8.cpp  yolov8.hpp
tools/: gimbal_test.py  gimbal_test2.py  logger.cpp  math_tools.cpp  plot_logger.hpp
